<resources>
    <string name="app_name">BOOK APP</string>
    <string name="about_us">about us</string>
    <string name="favourite">favourite</string>
    <string name="profile">profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="open_drawer">OPEN  DRAWER</string>
    <string name="close_drawer">CLOSE  DRAWER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">dashboard fragment</string>
    <string name="about_fragment">about frragment</string>
    <string name="fav_fragment">favourite fragment</string>
    <string name="profile_fragment">profile fragment</string>
    <string name="list_item">List item</string>
    <string name="todo_dec">TODO</string>
    <string name="todo_img">TODO</string>
    <string name="_4_5">4.5</string>
    <string name="name_of_the_book">name of the book</string>
    <string name="name_auther">authors name</string>
    <string name="price">400</string>
    <string name="about_book">about book</string>
    <string name="info_book">information of book</string>
    <string name="title_activity_tryingactivity">tryingactivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>