<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.descriptionactivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:id="@+id/toolbardescription"
        android:background="@color/colorPrimary"
        app:menu="@menu/menutoolbar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbardescription"
        android:layout_marginTop="20dp">

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:weightSum="6"
                android:id="@+id/linlay"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/launcher" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.6"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_book"
                        android:textSize="18sp"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:id="@+id/txt1"

                        />
                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_auther"
                        android:textSize="18sp"
                        android:padding="8dp"
                        android:textColor="#000000"
                        android:layout_below="@id/txt1"
                        />
                    <TextView
                        android:id="@+id/txt3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="18sp"
                        android:padding="8dp"
                        android:textColor="#000000"
                        android:layout_below="@id/txt2"
                        />


                </RelativeLayout>
                <TextView
                    android:id="@+id/decrating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="4.5"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_staricon"
                    />




            </LinearLayout>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/linlay"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="@string/about_book"
                 android:layout_centerHorizontal="true"
                 android:padding="10dp"
                 android:textSize="20sp"
                 android:id="@+id/textstatic"
                 android:textStyle="bold"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="@string/info_book"
                 android:layout_centerHorizontal="true"
                 android:padding="10dp"
                 android:textSize="20sp"
                 android:id="@+id/textstatic2"
                 android:layout_below="@id/textstatic"
                 android:layout_marginTop="15dp"
                 />
         </RelativeLayout>
     </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/addtofav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="ADD TO FAVIURITE"
        android:textColor="#ffffff"
        android:textSize="19sp"

        />


</RelativeLayout>